--- a/_posts/2022-01-13-intro-rev.md
+++ b/_posts/2022-01-13-intro-rev.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "reverse engineering"
-date:   2021-12-20
+title:  "intro to reverse engineering"
+date:   2022-1-13
 categories: rev
 ---
 
